# formula_student_packages

./: .gitignore  CMakeLists.txt  README.md  package.xml
cone_detection_camera/deprojection_cpp/deprojection_cpp/: CMakeLists.txt  package.xml
cone_detection_camera/deprojection_cpp/deprojection_cpp/src/: deprojection.cpp
docker/: Dockerfile  (+2 more)
object_fusion/: CMakeLists.txt  package.xml
object_fusion/inc/: trajectoryMarkers.hpp
object_fusion/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
object_fusion/object_fusion/: package.xml
object_fusion/object_fusion/object_fusion/: object_fusion.py
object_fusion/object_fusion/pointcloud_clastering/: package.xml  setup.cfg  setup.py
object_fusion/object_fusion/pointcloud_clastering/pointcloud_clastering/: clastering.py
object_fusion/src/: object_fusion_runnable.cpp
planner/: CMakeLists.txt  ft_fsd.py.bak  package.xml  setup.cfg  setup.py
planner/config/: default_params.yaml
planner/fsd_path_planning/calculate_path/__pycache__/: path_parameterization.calculate_path_curvature-50.py310.1.nbc  path_parameterization.calculate_path_curvature-50.py310.nbi  path_parameterization.calculate_path_curvature-50.py311.1.nbc  path_parameterization.calculate_path_curvature-50.py311.2.nbc  path_parameterization.calculate_path_curvature-50.py311.nbi  path_parameterization.create_cyclic_sliding_window_indices-97.py310.1.nbc  path_parameterization.create_cyclic_sliding_window_indices-97.py310.nbi  path_parameterization.create_cyclic_sliding_window_indices-97.py311.1.nbc  path_parameterization.create_cyclic_sliding_window_indices-97.py311.nbi
planner/fsd_path_planning/cone_matching/__pycache__/: match_directions.calculate_match_search_direction-23.py310.1.nbc  match_directions.calculate_match_search_direction-23.py310.2.nbc  match_directions.calculate_match_search_direction-23.py310.nbi  match_directions.calculate_match_search_direction-23.py311.1.nbc  match_directions.calculate_match_search_direction-23.py311.2.nbc  match_directions.calculate_match_search_direction-23.py311.nbi  match_directions.calculate_search_direction_for_one-7.py310.1.nbc  match_directions.calculate_search_direction_for_one-7.py310.2.nbc  match_directions.calculate_search_direction_for_one-7.py310.nbi  match_directions.calculate_search_direction_for_one-7.py311.1.nbc  match_directions.calculate_search_direction_for_one-7.py311.2.nbc  match_directions.calculate_search_direction_for_one-7.py311.nbi
planner/fsd_path_planning/utils/__pycache__/: math_utils.angle_from_2d_vector-274.py310.1.nbc  math_utils.angle_from_2d_vector-274.py310.2.nbc  math_utils.angle_from_2d_vector-274.py310.nbi  math_utils.angle_from_2d_vector-274.py311.1.nbc  math_utils.angle_from_2d_vector-274.py311.2.nbc  math_utils.angle_from_2d_vector-274.py311.nbi  math_utils.calc_pairwise_distances-149.py310.1.nbc  math_utils.calc_pairwise_distances-149.py310.nbi  math_utils.calc_pairwise_distances-149.py311.1.nbc  math_utils.calc_pairwise_distances-149.py311.nbi  math_utils.circle_fit-584.py310.1.nbc  math_utils.circle_fit-584.py310.nbi  math_utils.circle_fit-584.py311.1.nbc  math_utils.circle_fit-584.py311.nbi  math_utils.my_cdist_sq_euclidean-116.py310.1.nbc  math_utils.my_cdist_sq_euclidean-116.py310.2.nbc  math_utils.my_cdist_sq_euclidean-116.py310.3.nbc  math_utils.my_cdist_sq_euclidean-116.py310.4.nbc  math_utils.my_cdist_sq_euclidean-116.py310.nbi  math_utils.my_cdist_sq_euclidean-116.py311.1.nbc  math_utils.my_cdist_sq_euclidean-116.py311.2.nbc  math_utils.my_cdist_sq_euclidean-116.py311.3.nbc  math_utils.my_cdist_sq_euclidean-116.py311.4.nbc  math_utils.my_cdist_sq_euclidean-116.py311.nbi  math_utils.my_in1d-172.py310.1.nbc  math_utils.my_in1d-172.py310.nbi  math_utils.my_in1d-172.py311.1.nbc  (+62 more)
planner/inc/: trajectoryMarkers.hpp
planner/install/: local_setup.sh
planner/launch/: planner.launch.py  run_all.launch.py
planner/planner/: ft_fsd.py
planner/resource/: planner
planner/src/: local_planner.cpp
racetrack_simulator/: CMakeLists.txt  Readme.md  package.xml
racetrack_simulator/launch/: accuracy_meter.launch.py  lidar_cone_sim.launch.py
racetrack_simulator/src/: accuracy_meter.cpp  lidar_cone_sim.cpp
(+234 files in other folders)
