<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>racetrack_simulator</name>
  <version>1.0.0</version>
  <description>Racetrack simulator and accuracy meter for ROS2 Humble</description>
  <maintainer email="zahuczky@proton.me">Zahuczky</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>ros2launch</exec_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>rviz_2d_overlay_plugins</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
